# project-ai-hint

./: app.py  hint.pynb  hint_iteration_1.ipynb  langchain_starter.py  requirements.txt
ai_hint_project/: README.md  pyproject.toml
ai_hint_project/src/ai_hint_project/: baeldung_scraper.py  build_rag_store.py  crew.py  levels.py  main.py  oracle_scraper.py  query_rag_store.py  requirements.txt
ai_hint_project/src/ai_hint_project/baeldung_scraper/: baeldung_index.faiss  chunks.json
ai_hint_project/src/ai_hint_project/config/: agent_levels.json  agents copy.yaml  agents.yaml  tasks.yaml
ai_hint_project/src/ai_hint_project/oracle_articles/: Bounded_Type_Parameters_(The_Java™_Tutorials_>____.txt  Effects_of_Type_Erasure_and_Bridge_Methods_(The_Ja.txt  Erasure_of_Generic_Methods_(The_Java™_Tutorials_>_.txt  Erasure_of_Generic_Types_(The_Java™_Tutorials_>___.txt  Generic_Methods_and_Bounded_Type_Parameters_(The_J.txt  Generics,_Inheritance,_and_Subtypes_(The_Java™_Tut.txt  Guidelines_for_Wildcard_Use_(The_Java™_Tutorials_>.txt  Lesson:_Annotations_(The_Java™_Tutorials_>_Learnin.txt  Lesson:_Classes_and_Objects_(The_Java™_Tutorials_>.txt  Lesson:_Generics_(The_Java™_Tutorials_>_Bonus).txt  Lesson:_Generics_(Updated)_(The_Java™_Tutorials_>_.txt  Lesson:_Interfaces_and_Inheritance_(The_Java™_Tuto.txt  Lesson:_Language_Basics_(The_Java™_Tutorials_>_Lea.txt  Lesson:_Numbers_and_Strings_(The_Java™_Tutorials_>.txt  Lesson:_Object-Oriented_Programming_Concepts_(The_.txt  Lesson:_Packages_(The_Java™_Tutorials_>_Learning_t.txt  The_Java™_Tutorials.txt  (+10 more)
logs/: session_log.json
(+6 files in other folders)
