[project]
name = "ai_hint_project"
version = "0.1.0"
description = "ai_hint_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
ai_hint_project = "ai_hint_project.main:run"
run_crew = "ai_hint_project.main:run"
train = "ai_hint_project.main:train"
replay = "ai_hint_project.main:replay"
test = "ai_hint_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
